--- a/dossier/donnees/source/code.ipynb
+++ b/dossier/donnees/source/code.ipynb
@@ -67,6 +67,15 @@
    "source": [
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"cleaned_data\")"
+   ]
   }
  ],
  "metadata": {
