Added new cleaned_data.csv file

--- a/dossier/donnees/source/code.ipynb
+++ b/dossier/donnees/source/code.ipynb
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"cleaned_data\")"
+    "df.to_csv(\"cleaned_data.csv\")"
    ]
   }
  ],
