Updated Pipeline Code

--- a/dossier/donnees/source/code.ipynb
+++ b/dossier/donnees/source/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,17 +70,256 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"cleaned_data.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>packaging_en</th>\n",
+       "      <th>brands_en</th>\n",
+       "      <th>categories_en</th>\n",
+       "      <th>origins_en</th>\n",
+       "      <th>labels_en</th>\n",
+       "      <th>countries_en</th>\n",
+       "      <th>nutriscore_grade</th>\n",
+       "      <th>pnns_groups_1</th>\n",
+       "      <th>pnns_groups_2</th>\n",
+       "      <th>food_groups_en</th>\n",
+       "      <th>environmental_score_score</th>\n",
+       "      <th>environmental_score_grade</th>\n",
+       "      <th>main_category_en</th>\n",
+       "      <th>carbon-footprint_100g</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3795</th>\n",
+       "      <td>6414893385672</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kotimaista</td>\n",
+       "      <td>Beverages,Dairies,Dairy drinks</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>b</td>\n",
+       "      <td>Milk and dairy products</td>\n",
+       "      <td>Milk and yogurt</td>\n",
+       "      <td>Milk and dairy products,Milk and yogurt</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>Dairy drinks</td>\n",
+       "      <td>1.0500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4429</th>\n",
+       "      <td>4000539140761</td>\n",
+       "      <td>Pretzel &amp; nuts oat-drink</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>lindt</td>\n",
+       "      <td>Snacks,Sweet snacks,Cocoa and its products,Cho...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Vegetarian,Vegan,European Vegetarian Union,Eur...</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>e</td>\n",
+       "      <td>Sugary snacks</td>\n",
+       "      <td>Chocolate products</td>\n",
+       "      <td>Sugary snacks,Chocolate products</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Plant milk chocolates</td>\n",
+       "      <td>2.9500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6711</th>\n",
+       "      <td>6412000032426</td>\n",
+       "      <td>Kananuudeliruukku</td>\n",
+       "      <td>300 g</td>\n",
+       "      <td>Plastic</td>\n",
+       "      <td>Saarioinen</td>\n",
+       "      <td>Meals</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Source of proteins,High proteins,No lactose</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>c</td>\n",
+       "      <td>Composite foods</td>\n",
+       "      <td>One-dish meals</td>\n",
+       "      <td>Composite foods,One-dish meals</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Meals</td>\n",
+       "      <td>2.9500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6569</th>\n",
+       "      <td>6419800025661</td>\n",
+       "      <td>Kevytolo greippikivennäisvesi (makeuttamaton)</td>\n",
+       "      <td>1.65l</td>\n",
+       "      <td>Plastic,Pet-polyethylene-terephthalate,Bottle</td>\n",
+       "      <td>Kevytolo</td>\n",
+       "      <td>Beverages,Carbonated drinks,Waters,Spring wate...</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Low or no sugar,No colorings,No sugar,Without ...</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>a</td>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Waters and flavored waters</td>\n",
+       "      <td>Beverages,Unsweetened beverages</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Mineral waters</td>\n",
+       "      <td>0.0315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5457</th>\n",
+       "      <td>4056489454977</td>\n",
+       "      <td>Vapaan kanan munat</td>\n",
+       "      <td>15 kpl, 1020 g</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kot-kot-kotimaiset</td>\n",
+       "      <td>Farming products,Eggs,Chicken eggs,Barn chicke...</td>\n",
+       "      <td>fi:kananmuna-suomesta</td>\n",
+       "      <td>fi:Hyvää Suomesta,fi:valmistettu-suomessa</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>a</td>\n",
+       "      <td>Fish Meat Eggs</td>\n",
+       "      <td>Eggs</td>\n",
+       "      <td>Fish‚ Meat‚ Eggs,Eggs</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Barn chicken eggs</td>\n",
+       "      <td>2.7000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               code                                   product_name  \\\n",
+       "3795  6414893385672                                            NaN   \n",
+       "4429  4000539140761                       Pretzel & nuts oat-drink   \n",
+       "6711  6412000032426                              Kananuudeliruukku   \n",
+       "6569  6419800025661  Kevytolo greippikivennäisvesi (makeuttamaton)   \n",
+       "5457  4056489454977                             Vapaan kanan munat   \n",
+       "\n",
+       "            quantity                                   packaging_en  \\\n",
+       "3795             NaN                                            NaN   \n",
+       "4429             NaN                                            NaN   \n",
+       "6711           300 g                                        Plastic   \n",
+       "6569           1.65l  Plastic,Pet-polyethylene-terephthalate,Bottle   \n",
+       "5457  15 kpl, 1020 g                                            NaN   \n",
+       "\n",
+       "               brands_en                                      categories_en  \\\n",
+       "3795          Kotimaista                     Beverages,Dairies,Dairy drinks   \n",
+       "4429               lindt  Snacks,Sweet snacks,Cocoa and its products,Cho...   \n",
+       "6711          Saarioinen                                              Meals   \n",
+       "6569            Kevytolo  Beverages,Carbonated drinks,Waters,Spring wate...   \n",
+       "5457  Kot-kot-kotimaiset  Farming products,Eggs,Chicken eggs,Barn chicke...   \n",
+       "\n",
+       "                 origins_en  \\\n",
+       "3795                    NaN   \n",
+       "4429                    NaN   \n",
+       "6711                Finland   \n",
+       "6569                Finland   \n",
+       "5457  fi:kananmuna-suomesta   \n",
+       "\n",
+       "                                              labels_en countries_en  \\\n",
+       "3795                                                NaN      Finland   \n",
+       "4429  Vegetarian,Vegan,European Vegetarian Union,Eur...      Finland   \n",
+       "6711        Source of proteins,High proteins,No lactose      Finland   \n",
+       "6569  Low or no sugar,No colorings,No sugar,Without ...      Finland   \n",
+       "5457          fi:Hyvää Suomesta,fi:valmistettu-suomessa      Finland   \n",
+       "\n",
+       "     nutriscore_grade            pnns_groups_1               pnns_groups_2  \\\n",
+       "3795                b  Milk and dairy products             Milk and yogurt   \n",
+       "4429                e            Sugary snacks          Chocolate products   \n",
+       "6711                c          Composite foods              One-dish meals   \n",
+       "6569                a                Beverages  Waters and flavored waters   \n",
+       "5457                a           Fish Meat Eggs                        Eggs   \n",
+       "\n",
+       "                               food_groups_en  environmental_score_score  \\\n",
+       "3795  Milk and dairy products,Milk and yogurt                        NaN   \n",
+       "4429         Sugary snacks,Chocolate products                        NaN   \n",
+       "6711           Composite foods,One-dish meals                        NaN   \n",
+       "6569          Beverages,Unsweetened beverages                        NaN   \n",
+       "5457                    Fish‚ Meat‚ Eggs,Eggs                        NaN   \n",
+       "\n",
+       "     environmental_score_grade       main_category_en  carbon-footprint_100g  \n",
+       "3795                   unknown           Dairy drinks                 1.0500  \n",
+       "4429                       NaN  Plant milk chocolates                 2.9500  \n",
+       "6711                       NaN                  Meals                 2.9500  \n",
+       "6569                       NaN         Mineral waters                 0.0315  \n",
+       "5457                       NaN      Barn chicken eggs                 2.7000  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_co2 = pd.read_csv('https://raw.githubusercontent.com/Phi-project3/finalproject/refs/heads/main/dossier/donnees/source/category_schema/products_category_schema_v1.csv', sep=';')\n",
+    "\n",
+    "df_merged = df.merge(df_co2[['category_name', 'average']], how='left', left_on='pnns_groups_2', right_on='category_name')\n",
+    "\n",
+    "df_merged.drop(columns=['category_name', 'carbon-footprint_100g', 'carbon-footprint-from-meat-or-fish_100g'], inplace=True)\n",
+    "\n",
+    "df_merged.rename(columns={'average': 'carbon-footprint_100g'}, inplace=True)\n",
+    "\n",
+    "df_merged.sample(5)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
