Updated FLask Server

--- a/dossier/donnees/source/code.ipynb
+++ b/dossier/donnees/source/code.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -119,173 +119,173 @@
        "      <th>environmental_score_score</th>\n",
        "      <th>environmental_score_grade</th>\n",
        "      <th>main_category_en</th>\n",
-       "      <th>carbon-footprint_100g</th>\n",
+       "      <th>carbon-footprint_1kg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3795</th>\n",
-       "      <td>6414893385672</td>\n",
+       "      <th>4316</th>\n",
+       "      <td>6430104958701</td>\n",
+       "      <td>Pizza</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Kotimaista</td>\n",
-       "      <td>Beverages,Dairies,Dairy drinks</td>\n",
+       "      <td>Voner</td>\n",
+       "      <td>Meals,Pizzas pies and quiches,Pizzas</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Finland</td>\n",
-       "      <td>b</td>\n",
-       "      <td>Milk and dairy products</td>\n",
-       "      <td>Milk and yogurt</td>\n",
-       "      <td>Milk and dairy products,Milk and yogurt</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>unknown</td>\n",
-       "      <td>Dairy drinks</td>\n",
-       "      <td>1.0500</td>\n",
+       "      <td>Composite foods</td>\n",
+       "      <td>Pizza pies and quiches</td>\n",
+       "      <td>Composite foods,Pizza pies and quiches</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pizzas</td>\n",
+       "      <td>2.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4429</th>\n",
-       "      <td>4000539140761</td>\n",
-       "      <td>Pretzel &amp; nuts oat-drink</td>\n",
+       "      <th>4700</th>\n",
+       "      <td>6410405322661</td>\n",
+       "      <td>Suomalainen Kaurahiutale</td>\n",
+       "      <td>1 kg</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Pirkka</td>\n",
+       "      <td>Plant-based foods and beverages,Plant-based fo...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Source of fibre,High fibres,fi:Hyvää Suomesta,...</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>a</td>\n",
+       "      <td>Cereals and potatoes</td>\n",
+       "      <td>Breakfast cereals</td>\n",
+       "      <td>Cereals and potatoes,Breakfast cereals</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>lindt</td>\n",
-       "      <td>Snacks,Sweet snacks,Cocoa and its products,Cho...</td>\n",
+       "      <td>Rolled oats</td>\n",
+       "      <td>2.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>4056489244097</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Vegetarian,Vegan,European Vegetarian Union,Eur...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6481</th>\n",
+       "      <td>6405691450006</td>\n",
+       "      <td>Rotukarja Kylmäsavuhärkä Ohuen Ohut</td>\n",
+       "      <td>100 g</td>\n",
+       "      <td>Plastic,Pet-polyethylene-terephthalate,Other-p...</td>\n",
+       "      <td>Tamminen</td>\n",
+       "      <td>Meats and their products,Beef and its products...</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>No gluten,No lactose,fi:Hyvää Suomesta</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>e</td>\n",
+       "      <td>Fish Meat Eggs</td>\n",
+       "      <td>Meat</td>\n",
+       "      <td>Fish‚ Meat‚ Eggs,Meat,Meat other than poultry</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Beef</td>\n",
+       "      <td>43.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3074</th>\n",
+       "      <td>6410405119605</td>\n",
+       "      <td>Kaakaotäytekeksi</td>\n",
+       "      <td>350 g</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>K-menu</td>\n",
+       "      <td>Snacks,Sweet snacks,Biscuits and cakes,Biscuit...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Finland</td>\n",
        "      <td>e</td>\n",
        "      <td>Sugary snacks</td>\n",
-       "      <td>Chocolate products</td>\n",
-       "      <td>Sugary snacks,Chocolate products</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Plant milk chocolates</td>\n",
-       "      <td>2.9500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6711</th>\n",
-       "      <td>6412000032426</td>\n",
-       "      <td>Kananuudeliruukku</td>\n",
-       "      <td>300 g</td>\n",
-       "      <td>Plastic</td>\n",
-       "      <td>Saarioinen</td>\n",
-       "      <td>Meals</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>Source of proteins,High proteins,No lactose</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>c</td>\n",
-       "      <td>Composite foods</td>\n",
-       "      <td>One-dish meals</td>\n",
-       "      <td>Composite foods,One-dish meals</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Meals</td>\n",
-       "      <td>2.9500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6569</th>\n",
-       "      <td>6419800025661</td>\n",
-       "      <td>Kevytolo greippikivennäisvesi (makeuttamaton)</td>\n",
-       "      <td>1.65l</td>\n",
-       "      <td>Plastic,Pet-polyethylene-terephthalate,Bottle</td>\n",
-       "      <td>Kevytolo</td>\n",
-       "      <td>Beverages,Carbonated drinks,Waters,Spring wate...</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>Low or no sugar,No colorings,No sugar,Without ...</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>a</td>\n",
-       "      <td>Beverages</td>\n",
-       "      <td>Waters and flavored waters</td>\n",
-       "      <td>Beverages,Unsweetened beverages</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mineral waters</td>\n",
-       "      <td>0.0315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5457</th>\n",
-       "      <td>4056489454977</td>\n",
-       "      <td>Vapaan kanan munat</td>\n",
-       "      <td>15 kpl, 1020 g</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Kot-kot-kotimaiset</td>\n",
-       "      <td>Farming products,Eggs,Chicken eggs,Barn chicke...</td>\n",
-       "      <td>fi:kananmuna-suomesta</td>\n",
-       "      <td>fi:Hyvää Suomesta,fi:valmistettu-suomessa</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>a</td>\n",
-       "      <td>Fish Meat Eggs</td>\n",
-       "      <td>Eggs</td>\n",
-       "      <td>Fish‚ Meat‚ Eggs,Eggs</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Barn chicken eggs</td>\n",
-       "      <td>2.7000</td>\n",
+       "      <td>Biscuits and cakes</td>\n",
+       "      <td>Sugary snacks,Biscuits and cakes</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>d</td>\n",
+       "      <td>Biscuits</td>\n",
+       "      <td>2.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               code                                   product_name  \\\n",
-       "3795  6414893385672                                            NaN   \n",
-       "4429  4000539140761                       Pretzel & nuts oat-drink   \n",
-       "6711  6412000032426                              Kananuudeliruukku   \n",
-       "6569  6419800025661  Kevytolo greippikivennäisvesi (makeuttamaton)   \n",
-       "5457  4056489454977                             Vapaan kanan munat   \n",
+       "               code                         product_name quantity  \\\n",
+       "4316  6430104958701                                Pizza      NaN   \n",
+       "4700  6410405322661             Suomalainen Kaurahiutale     1 kg   \n",
+       "349   4056489244097                                  NaN      NaN   \n",
+       "6481  6405691450006  Rotukarja Kylmäsavuhärkä Ohuen Ohut    100 g   \n",
+       "3074  6410405119605                     Kaakaotäytekeksi    350 g   \n",
        "\n",
-       "            quantity                                   packaging_en  \\\n",
-       "3795             NaN                                            NaN   \n",
-       "4429             NaN                                            NaN   \n",
-       "6711           300 g                                        Plastic   \n",
-       "6569           1.65l  Plastic,Pet-polyethylene-terephthalate,Bottle   \n",
-       "5457  15 kpl, 1020 g                                            NaN   \n",
+       "                                           packaging_en brands_en  \\\n",
+       "4316                                                NaN     Voner   \n",
+       "4700                                                NaN    Pirkka   \n",
+       "349                                                 NaN       NaN   \n",
+       "6481  Plastic,Pet-polyethylene-terephthalate,Other-p...  Tamminen   \n",
+       "3074                                                NaN    K-menu   \n",
        "\n",
-       "               brands_en                                      categories_en  \\\n",
-       "3795          Kotimaista                     Beverages,Dairies,Dairy drinks   \n",
-       "4429               lindt  Snacks,Sweet snacks,Cocoa and its products,Cho...   \n",
-       "6711          Saarioinen                                              Meals   \n",
-       "6569            Kevytolo  Beverages,Carbonated drinks,Waters,Spring wate...   \n",
-       "5457  Kot-kot-kotimaiset  Farming products,Eggs,Chicken eggs,Barn chicke...   \n",
-       "\n",
-       "                 origins_en  \\\n",
-       "3795                    NaN   \n",
-       "4429                    NaN   \n",
-       "6711                Finland   \n",
-       "6569                Finland   \n",
-       "5457  fi:kananmuna-suomesta   \n",
+       "                                          categories_en origins_en  \\\n",
+       "4316               Meals,Pizzas pies and quiches,Pizzas        NaN   \n",
+       "4700  Plant-based foods and beverages,Plant-based fo...        NaN   \n",
+       "349                                                 NaN        NaN   \n",
+       "6481  Meats and their products,Beef and its products...    Finland   \n",
+       "3074  Snacks,Sweet snacks,Biscuits and cakes,Biscuit...        NaN   \n",
        "\n",
        "                                              labels_en countries_en  \\\n",
-       "3795                                                NaN      Finland   \n",
-       "4429  Vegetarian,Vegan,European Vegetarian Union,Eur...      Finland   \n",
-       "6711        Source of proteins,High proteins,No lactose      Finland   \n",
-       "6569  Low or no sugar,No colorings,No sugar,Without ...      Finland   \n",
-       "5457          fi:Hyvää Suomesta,fi:valmistettu-suomessa      Finland   \n",
+       "4316                                                NaN      Finland   \n",
+       "4700  Source of fibre,High fibres,fi:Hyvää Suomesta,...      Finland   \n",
+       "349                                                 NaN      Finland   \n",
+       "6481             No gluten,No lactose,fi:Hyvää Suomesta      Finland   \n",
+       "3074                                                NaN      Finland   \n",
        "\n",
-       "     nutriscore_grade            pnns_groups_1               pnns_groups_2  \\\n",
-       "3795                b  Milk and dairy products             Milk and yogurt   \n",
-       "4429                e            Sugary snacks          Chocolate products   \n",
-       "6711                c          Composite foods              One-dish meals   \n",
-       "6569                a                Beverages  Waters and flavored waters   \n",
-       "5457                a           Fish Meat Eggs                        Eggs   \n",
+       "     nutriscore_grade         pnns_groups_1           pnns_groups_2  \\\n",
+       "4316          unknown       Composite foods  Pizza pies and quiches   \n",
+       "4700                a  Cereals and potatoes       Breakfast cereals   \n",
+       "349               NaN                   NaN                     NaN   \n",
+       "6481                e        Fish Meat Eggs                    Meat   \n",
+       "3074                e         Sugary snacks      Biscuits and cakes   \n",
        "\n",
-       "                               food_groups_en  environmental_score_score  \\\n",
-       "3795  Milk and dairy products,Milk and yogurt                        NaN   \n",
-       "4429         Sugary snacks,Chocolate products                        NaN   \n",
-       "6711           Composite foods,One-dish meals                        NaN   \n",
-       "6569          Beverages,Unsweetened beverages                        NaN   \n",
-       "5457                    Fish‚ Meat‚ Eggs,Eggs                        NaN   \n",
+       "                                     food_groups_en  \\\n",
+       "4316         Composite foods,Pizza pies and quiches   \n",
+       "4700         Cereals and potatoes,Breakfast cereals   \n",
+       "349                                             NaN   \n",
+       "6481  Fish‚ Meat‚ Eggs,Meat,Meat other than poultry   \n",
+       "3074               Sugary snacks,Biscuits and cakes   \n",
        "\n",
-       "     environmental_score_grade       main_category_en  carbon-footprint_100g  \n",
-       "3795                   unknown           Dairy drinks                 1.0500  \n",
-       "4429                       NaN  Plant milk chocolates                 2.9500  \n",
-       "6711                       NaN                  Meals                 2.9500  \n",
-       "6569                       NaN         Mineral waters                 0.0315  \n",
-       "5457                       NaN      Barn chicken eggs                 2.7000  "
+       "      environmental_score_score environmental_score_grade main_category_en  \\\n",
+       "4316                        NaN                       NaN           Pizzas   \n",
+       "4700                        NaN                       NaN      Rolled oats   \n",
+       "349                         NaN                       NaN              NaN   \n",
+       "6481                        NaN                       NaN             Beef   \n",
+       "3074                       40.0                         d         Biscuits   \n",
+       "\n",
+       "      carbon-footprint_1kg  \n",
+       "4316                  2.95  \n",
+       "4700                  2.65  \n",
+       "349                   6.30  \n",
+       "6481                 43.33  \n",
+       "3074                  2.50  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
     "\n",
     "df_merged.drop(columns=['category_name', 'carbon-footprint_100g', 'carbon-footprint-from-meat-or-fish_100g'], inplace=True)\n",
     "\n",
-    "df_merged.rename(columns={'average': 'carbon-footprint_100g'}, inplace=True)\n",
+    "df_merged.rename(columns={'average': 'carbon-footprint_1kg'}, inplace=True)\n",
     "\n",
     "df_merged.sample(5)"
    ]
