--- a/dossier/donnees/source/code.ipynb
+++ b/dossier/donnees/source/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "\"\\n\\ndf_co2 = pd.read_csv('https://raw.githubusercontent.com/Phi-project3/finalproject/refs/heads/main/dossier/donnees/source/category_schema/products_category_schema_v1.csv', sep=';')\\n\\ndf_co2.dropna(subset=['category_name'], inplace=True)\\n\\ndf_merged = df.merge(df_co2[['category_name', 'average']], how='left', left_on='pnns_groups_2', right_on='category_name')\\n\\ndf_merged.drop(columns=['category_name', 'carbon-footprint_100g', 'carbon-footprint-from-meat-or-fish_100g'], inplace=True)\\n\\ndf_merged.rename(columns={'average': 'carbon-footprint_1kg'}, inplace=True)\\n\\ndf_merged.sample(5)\\n\\n\""
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,22 +117,21 @@
     "\n",
     "df_merged.sample(5)\n",
     "\n",
-    "'''\n",
-    "\n"
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_merged.to_csv(\"merged_data.csv\")"
+    "# df_merged.to_csv(\"merged_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -178,110 +177,115 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>861</th>\n",
-       "      <td>861</td>\n",
-       "      <td>6415719330968</td>\n",
+       "      <th>153</th>\n",
+       "      <td>153</td>\n",
+       "      <td>6411401037016</td>\n",
+       "      <td>Raemix</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>410 g</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Rainbow</td>\n",
+       "      <td>Fazer</td>\n",
+       "      <td>Snacks,Sweet snacks,Cocoa and its products,Con...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Finland,France</td>\n",
+       "      <td>e</td>\n",
+       "      <td>Sugary snacks</td>\n",
+       "      <td>Sweets</td>\n",
+       "      <td>Sugary snacks,Sweets</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>b</td>\n",
+       "      <td>Gummi candies</td>\n",
+       "      <td>2.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2921</th>\n",
+       "      <td>2920</td>\n",
+       "      <td>5712840020081</td>\n",
+       "      <td>Protein</td>\n",
+       "      <td>50 g</td>\n",
+       "      <td>Plastic,Bag</td>\n",
+       "      <td>raw-bite</td>\n",
        "      <td>Plant-based foods and beverages,Plant-based fo...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>Salty snacks</td>\n",
-       "      <td>Fruit nectars</td>\n",
-       "      <td>Salty snacks,Salty and fatty products</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Pickles</td>\n",
-       "      <td>2.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1874</th>\n",
-       "      <td>1873</td>\n",
-       "      <td>7350000552478</td>\n",
-       "      <td>YoPRO protein pudding chocolate</td>\n",
-       "      <td>180 g</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Danone</td>\n",
-       "      <td>Dairies,Desserts,Dairy desserts,Puddings,Choco...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Green Dot</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>a</td>\n",
-       "      <td>Milk and dairy products</td>\n",
+       "      <td>European Union and Non European Union</td>\n",
+       "      <td>No gluten,Organic,Vegetarian,EU Organic,Non-EU...</td>\n",
+       "      <td>Finland,France,Germany,Switzerland</td>\n",
+       "      <td>not-applicable</td>\n",
+       "      <td>Sugary snacks</td>\n",
        "      <td>Protein snacks and drinks</td>\n",
-       "      <td>Milk and dairy products,Dairy desserts</td>\n",
+       "      <td>Sugary snacks,Biscuits and cakes</td>\n",
        "      <td>NaN</td>\n",
        "      <td>unknown</td>\n",
-       "      <td>Chocolate creamy puddings</td>\n",
-       "      <td>2.05</td>\n",
+       "      <td>fr:Barres aux fruits</td>\n",
+       "      <td>2.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>972</th>\n",
-       "      <td>972</td>\n",
-       "      <td>6430064407189</td>\n",
-       "      <td>Tuplasuklaa &amp; Metsämarjat</td>\n",
-       "      <td>80 g, 100 mL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Classic</td>\n",
-       "      <td>Snacks,Desserts,Sweet snacks,Cocoa and its pro...</td>\n",
+       "      <th>4411</th>\n",
+       "      <td>4409</td>\n",
+       "      <td>4056489244622</td>\n",
+       "      <td>Pizzaraaste</td>\n",
+       "      <td>500 g</td>\n",
+       "      <td>Plastic,Other-plastics</td>\n",
+       "      <td>Milbona,Lidl</td>\n",
+       "      <td>Dairies,Fermented foods,Fermented milk product...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Finland</td>\n",
        "      <td>e</td>\n",
        "      <td>Milk and dairy products</td>\n",
-       "      <td>Ice cream</td>\n",
-       "      <td>Milk and dairy products,Ice cream</td>\n",
+       "      <td>Cheese</td>\n",
+       "      <td>Milk and dairy products,Cheese</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Ice cream bars</td>\n",
-       "      <td>2.60</td>\n",
+       "      <td>Grated cheese</td>\n",
+       "      <td>12.05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0           code                     product_name  \\\n",
-       "861          861  6415719330968                              NaN   \n",
-       "1874        1873  7350000552478  YoPRO protein pudding chocolate   \n",
-       "972          972  6430064407189        Tuplasuklaa & Metsämarjat   \n",
+       "      Unnamed: 0           code product_name quantity            packaging_en  \\\n",
+       "153          153  6411401037016       Raemix      NaN                     NaN   \n",
+       "2921        2920  5712840020081      Protein     50 g             Plastic,Bag   \n",
+       "4411        4409  4056489244622  Pizzaraaste    500 g  Plastic,Other-plastics   \n",
        "\n",
-       "          quantity packaging_en brands_en  \\\n",
-       "861          410 g          NaN   Rainbow   \n",
-       "1874         180 g          NaN    Danone   \n",
-       "972   80 g, 100 mL          NaN   Classic   \n",
+       "         brands_en                                      categories_en  \\\n",
+       "153          Fazer  Snacks,Sweet snacks,Cocoa and its products,Con...   \n",
+       "2921      raw-bite  Plant-based foods and beverages,Plant-based fo...   \n",
+       "4411  Milbona,Lidl  Dairies,Fermented foods,Fermented milk product...   \n",
        "\n",
-       "                                          categories_en origins_en  labels_en  \\\n",
-       "861   Plant-based foods and beverages,Plant-based fo...        NaN        NaN   \n",
-       "1874  Dairies,Desserts,Dairy desserts,Puddings,Choco...        NaN  Green Dot   \n",
-       "972   Snacks,Desserts,Sweet snacks,Cocoa and its pro...        NaN        NaN   \n",
+       "                                 origins_en  \\\n",
+       "153                                     NaN   \n",
+       "2921  European Union and Non European Union   \n",
+       "4411                                    NaN   \n",
        "\n",
-       "     countries_en nutriscore_grade            pnns_groups_1  \\\n",
-       "861       Finland          unknown             Salty snacks   \n",
-       "1874      Finland                a  Milk and dairy products   \n",
-       "972       Finland                e  Milk and dairy products   \n",
+       "                                              labels_en  \\\n",
+       "153                                                 NaN   \n",
+       "2921  No gluten,Organic,Vegetarian,EU Organic,Non-EU...   \n",
+       "4411                                                NaN   \n",
        "\n",
-       "                  pnns_groups_2                          food_groups_en  \\\n",
-       "861               Fruit nectars   Salty snacks,Salty and fatty products   \n",
-       "1874  Protein snacks and drinks  Milk and dairy products,Dairy desserts   \n",
-       "972                   Ice cream       Milk and dairy products,Ice cream   \n",
+       "                            countries_en nutriscore_grade  \\\n",
+       "153                       Finland,France                e   \n",
+       "2921  Finland,France,Germany,Switzerland   not-applicable   \n",
+       "4411                             Finland                e   \n",
        "\n",
-       "      environmental_score_score environmental_score_grade  \\\n",
-       "861                         NaN                       NaN   \n",
-       "1874                        NaN                   unknown   \n",
-       "972                         NaN                       NaN   \n",
+       "                pnns_groups_1              pnns_groups_2  \\\n",
+       "153             Sugary snacks                     Sweets   \n",
+       "2921            Sugary snacks  Protein snacks and drinks   \n",
+       "4411  Milk and dairy products                     Cheese   \n",
        "\n",
-       "               main_category_en  carbon-footprint_1kg  \n",
-       "861                     Pickles                  2.10  \n",
-       "1874  Chocolate creamy puddings                  2.05  \n",
-       "972              Ice cream bars                  2.60  "
+       "                        food_groups_en  environmental_score_score  \\\n",
+       "153               Sugary snacks,Sweets                       69.0   \n",
+       "2921  Sugary snacks,Biscuits and cakes                        NaN   \n",
+       "4411    Milk and dairy products,Cheese                        NaN   \n",
+       "\n",
+       "     environmental_score_grade      main_category_en  carbon-footprint_1kg  \n",
+       "153                          b         Gummi candies                  2.95  \n",
+       "2921                   unknown  fr:Barres aux fruits                  2.50  \n",
+       "4411                       NaN         Grated cheese                 12.05  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +376,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +396,7 @@
        "(4652, 18)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +416,7 @@
        "(4650, 18)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +437,7 @@
        "(4603, 18)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +770,7 @@
        "[4603 rows x 15 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1074,7 @@
        "9                        NaN                       NaN                  2.50  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1096,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1170,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,27 +1181,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_co2 = pd.read_csv('C:\\\\Users\\\\vuojo\\\\Desktop\\\\finalproject\\\\dossier\\\\donnees\\\\source\\\\category_schema\\\\products_category_schema_v3.csv', sep=';')\n",
-    " \n",
+    "df_co2 = pd.read_csv('https://raw.githubusercontent.com/Phi-project3/finalproject/refs/heads/main/dossier/donnees/source/category_schema/products_category_schema_v3.csv', sep=';')\n",
+    "\n",
     "df_co2.dropna(subset=['category_name'], inplace=True)\n",
-    " \n",
-    "df_merged = df_main_updated.merge(df_co2[['category_name', 'average']], how='left', left_on='pnns_groups_2', right_on='category_name')\n",
-    " \n",
-    "df_merged.rename(columns={'average': 'carbon-footprint_1kg_new'}, inplace=True)\n",
     "\n",
-    "df_merged.drop(columns=['category_name', 'carbon-footprint_1kg'], inplace=True)\n",
+    "df_merged = df.merge(df_co2[['category_name', 'average']], how='left', left_on='pnns_groups_2', right_on='category_name')\n",
     "\n",
-    "df_main_updated = df_merged\n",
-    "\n"
+    "df_merged.drop(columns=['category_name', 'carbon-footprint_100g', 'carbon-footprint-from-meat-or-fish_100g'], inplace=True)\n",
+    "\n",
+    "df_merged.rename(columns={'average': 'carbon-footprint_1kg'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1235,7 @@
        "      <th>Product main category</th>\n",
        "      <th>Environmental score</th>\n",
        "      <th>environmental_score_grade</th>\n",
-       "      <th>carbon-footprint_1kg_new</th>\n",
+       "      <th>Carbon-footprint 1kg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1304,7 +1305,7 @@
        "      <td>Soups</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1461,20 +1462,20 @@
        "8         Cereals and potatoes,Bread                    Breads   \n",
        "9         Cereals and potatoes,Bread                    Breads   \n",
        "\n",
-       "   Environmental score environmental_score_grade  carbon-footprint_1kg_new  \n",
-       "0                  NaN                       NaN                      0.55  \n",
-       "1                  NaN                       NaN                      2.10  \n",
-       "2                  NaN                   unknown                      2.95  \n",
-       "3                  NaN                       NaN                       NaN  \n",
-       "4                  NaN                   unknown                      2.95  \n",
-       "5                  NaN                   unknown                      2.65  \n",
-       "6                  NaN                   unknown                      2.50  \n",
-       "7                  NaN                       NaN                      2.60  \n",
-       "8                  NaN                       NaN                      2.50  \n",
-       "9                  NaN                       NaN                      2.50  "
+       "   Environmental score environmental_score_grade  Carbon-footprint 1kg  \n",
+       "0                  NaN                       NaN                  0.55  \n",
+       "1                  NaN                       NaN                  2.10  \n",
+       "2                  NaN                   unknown                  2.95  \n",
+       "3                  NaN                       NaN                  2.95  \n",
+       "4                  NaN                   unknown                  2.95  \n",
+       "5                  NaN                   unknown                  2.65  \n",
+       "6                  NaN                   unknown                  2.50  \n",
+       "7                  NaN                       NaN                  2.60  \n",
+       "8                  NaN                       NaN                  2.50  \n",
+       "9                  NaN                       NaN                  2.50  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,18 +1485,11 @@
     "\n",
     "df_main_updated.head(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
