--- a/dossier/donnees/source/code.ipynb
+++ b/dossier/donnees/source/code.ipynb
@@ -1791,7 +1791,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
